feat: complete register API & event logging